--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+# Mac stuff
 .DS_Store
+# Python stuff
 __pycache__/
+
+# Python virtual environment
+.venv
+
+# vscode workspace settings
+.vscode
+
+# Any database files
+*.db
+
+# Environment file
+.env
