Better example.env

--- a/example.env
+++ b/example.env
@@ -1,2 +1,8 @@
+# Key to encode session information.
 MOBILE_LOTW_SECRET_KEY = "a_secret_key"
+
+# Name of the sqlite database.
 DB_NAME = "mobile_lotw.db"
+
+# Time in minutes before expiring cached information.
+SESSION_CACHE_EXPIRATION = 30
