--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+flake8==6.1.0
 Flask==3.0.0
 greenlet==3.0.1
 idna==3.6
@@ -13,10 +14,13 @@ isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==4.0.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
 python-dotenv==1.0.0
 requests==2.31.0
 soupsieve==2.5
