Big changes in summary:
- Alembic base files
- Move from g.web_session to lotw file
    - Theoretically better failure handling, DRY
- Store lotw cookies in DB, encrypted with env key
- Cache map markers in DB
- Add popups to map
- Cache qsls w/ DB
- Import qsls from LoTW on first login/cache expiration
- Updated requirements
- Changed DB User structure

--- a/example.env
+++ b/example.env
@@ -1,5 +1,8 @@
-# Key to encode session information.
-MOBILE_LOTW_SECRET_KEY = "a_secret_key"
+# Key to encode session information. Variable length accepted.
+MOBILE_LOTW_SECRET_KEY = "REPLACE ME"
+
+# Key to encode sensitive DB information. *Must be 16 characters long.*
+MOBILE_LOTW_DB_KEY = "REPLACE ME"
 
 # Name of the sqlite database.
 DB_NAME = "mobile_lotw.db"
