--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,13 @@
 {
+  "plugins": ["prettier-plugin-jinja-template"],
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": ["*.html"],
+      "options": {
+        "parser": "jinja-template"
+      }
+    }
+  ]
 }
