Change from sqlite default to sqlalchemy connection string
- Change from a mandatory sqlite db to a sqlalchemy connection string
-  Fix stripping and lowering errors on login which caused user duplicates.
- Update requirements to install psycopg, the preferred DB driver.
- Update example.env to use a connection string var.

--- a/example.env
+++ b/example.env
@@ -4,8 +4,8 @@ MOBILE_LOTW_SECRET_KEY = "REPLACE ME"
 # Key to encode sensitive DB information. *Must be 16 characters long.*
 MOBILE_LOTW_DB_KEY = "REPLACE ME"
 
-# Name of the sqlite database.
-DB_NAME = "mobile_lotw.db"
+# Database connection url.
+DB_URL = "REPLACE ME"
 
 # Time in minutes before expiring cached information.
 SESSION_CACHE_EXPIRATION = 30
