--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ bs4==0.0.1
 Flask==3.0.0
 maidenhead==1.7.0
 requests==2.31.0 
+psycopg==3.1.16
+psycopg-binary==3.1.16
+psycopg-pool==3.2.0
 pycryptodome==3.19.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.23
