Harden auth and API flows; add async QSO sync and billing foundation

--- a/example.env
+++ b/example.env
@@ -9,3 +9,24 @@ DB_URL = "REPLACE ME"
 
 # Time in minutes before expiring cached information.
 SESSION_CACHE_EXPIRATION = 30
+
+# Timeout for outbound requests to lotw.arrl.org in seconds.
+LOTW_REQUEST_TIMEOUT_SECONDS = 20
+
+# Set to 1/true in production behind HTTPS.
+MOBILE_LOTW_SECURE_COOKIES = 0
+
+# Number of background workers for QSO imports.
+QSO_IMPORT_MAX_WORKERS = 2
+
+# Enable paid entitlement enforcement.
+REQUIRE_ACTIVE_SUBSCRIPTION = 0
+
+# Deploy webhook settings (optional, recommended over API key).
+DEPLOY_WEBHOOK_SECRET = "REPLACE ME"
+DEPLOY_ALLOWED_IPS = ""
+
+# Stripe billing settings (optional until billing launch).
+STRIPE_SECRET_KEY = "REPLACE ME"
+STRIPE_WEBHOOK_SECRET = "REPLACE ME"
+STRIPE_PRICE_ID = "REPLACE ME"
