Add paid QSL digest notifications with push/email delivery

--- a/example.env
+++ b/example.env
@@ -29,4 +29,27 @@ DEPLOY_ALLOWED_IPS = ""
 # Stripe billing settings (optional until billing launch).
 STRIPE_SECRET_KEY = "REPLACE ME"
 STRIPE_WEBHOOK_SECRET = "REPLACE ME"
-STRIPE_PRICE_ID = "REPLACE ME"
+STRIPE_PRICE_ID_MONTHLY = "REPLACE ME"
+STRIPE_PRICE_ID_ANNUAL = "REPLACE ME"
+# Backwards compatibility fallback if monthly env var is not set.
+STRIPE_PRICE_ID = ""
+
+# QSL digest notifications feature flags.
+DIGEST_NOTIFICATIONS_ENABLED = 1
+WEB_PUSH_ENABLED = 1
+DIGEST_EMAIL_ENABLED = 1
+DIGEST_DRY_RUN = 0
+
+# Web push (VAPID) settings.
+WEB_PUSH_VAPID_PUBLIC_KEY = ""
+WEB_PUSH_VAPID_PRIVATE_KEY = ""
+WEB_PUSH_VAPID_SUBJECT = "mailto:info@mobilelotw.org"
+
+# Digest URL and SMTP fallback email.
+DIGEST_BASE_URL = "https://mobilelotw.org"
+DIGEST_SMTP_HOST = ""
+DIGEST_SMTP_PORT = 587
+DIGEST_SMTP_USERNAME = ""
+DIGEST_SMTP_PASSWORD = ""
+DIGEST_SMTP_FROM_EMAIL = "info@mobilelotw.org"
+DIGEST_SMTP_STARTTLS = 1
