Unify notifications settings and add preferred digest email

--- a/example.env
+++ b/example.env
@@ -27,12 +27,15 @@ DEPLOY_WEBHOOK_SECRET = "REPLACE ME"
 DEPLOY_ALLOWED_IPS = ""
 
 # Stripe billing settings (optional until billing launch).
+BILLING_UI_ENABLED = 1
 STRIPE_SECRET_KEY = "REPLACE ME"
 STRIPE_WEBHOOK_SECRET = "REPLACE ME"
 STRIPE_PRICE_ID_MONTHLY = "REPLACE ME"
 STRIPE_PRICE_ID_ANNUAL = "REPLACE ME"
 # Backwards compatibility fallback if monthly env var is not set.
 STRIPE_PRICE_ID = ""
+# Optional: where Stripe billing portal returns users.
+STRIPE_PORTAL_RETURN_URL = "https://mobilelotw.org/notifications/settings"
 
 # QSL digest notifications feature flags.
 DIGEST_NOTIFICATIONS_ENABLED = 1
