--- a/example.env
+++ b/example.env
@@ -42,6 +42,8 @@ DIGEST_NOTIFICATIONS_ENABLED = 1
 WEB_PUSH_ENABLED = 1
 DIGEST_EMAIL_ENABLED = 1
 DIGEST_DRY_RUN = 0
+# Retain digest batches/deliveries for N days (0 disables cleanup).
+DIGEST_RETENTION_DAYS = 90
 
 # Web push (VAPID) settings.
 WEB_PUSH_VAPID_PUBLIC_KEY = ""
